--- a/src/main/webapp/app/pages/shops/shops.html
+++ b/src/main/webapp/app/pages/shops/shops.html
@@ -1,5 +1,11 @@
+<div style="padding: 10px 0;">
+    <div class="alert alert-success" ng-if="vm.successUpdateData != undefined">Данные обновлены успешно.</div>
+    <div class="alert alert-danger"  ng-if="vm.errorUpdateData != undefined">Во время обновления данных произошла ошибка.</div>
+</div>
 
-<button class="btn btn-default">Распарсить данные</button>
+<button class="btn btn-default" ng-click="vm.parsingData()">Распарсить данные</button>
+
+
 <h1>Каталог сайтов, предназначенные для парсинга.</h1>
 
 <table class="table table-hover">
@@ -10,6 +16,7 @@
     <th>Статус</th>
     <th>Дата создания</th>
     <th>Дата последнего редактирования</th>
+    <th></th>
     <th></th>
 </tr>
 </thead>
@@ -23,6 +30,9 @@
     </td>
     <td>{{shop.createdDate | date:'dd/MM/yy HH:mm'}}</td>
     <td>{{shop.updatedDate | date:'dd/MM/yy HH:mm'}}</td>
+    <th>
+        <button type="submit" class="btn btn-success btn-sm" ng-click = "vm.parsingShop(shop.id)">Обновить</button>
+    </th>
     <th>
         <div class="btn-group flex-btn-group-container">
             <button type="submit"
