--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -113,7 +113,8 @@
 <script src="app/layouts/navbar/navbar.controller.js"></script>
 <script src="app/layouts/navbar/active-menu.directive.js"></script>
 <script src="app/layouts/error/error.state.js"></script>
-<script src="app/home/home.state.js"></script>
+<!--
+<script src="app/home/home.state.js"></script>-->
 <script src="app/home/home.controller.js"></script>
 <script src="app/entities/entity.state.js"></script>
 <script src="app/components/util/truncate-words.filter.js"></script>
@@ -200,7 +201,7 @@
 
 
 
-
+<script src="app/pages/initial/initial.state.js"></script>
 
 
 <script src="app/pages/page.state.js"></script>
