--- a/src/main/webapp/app/pages/shops/shops.html
+++ b/src/main/webapp/app/pages/shops/shops.html
@@ -11,6 +11,7 @@
 <table class="table table-hover">
 <thead>
 <tr>
+    <th></th>
     <th>URL</th>
     <th>Наименование сайта</th>
     <th>Статус</th>
@@ -22,6 +23,7 @@
 </thead>
 <tbody>
 <tr ng-repeat="shop in vm.shops">
+    <td>{{shop.id}}</td>
     <td><a href="#/shops/{{shop.id}}">{{shop.url}}</a></td>
     <td>{{shop.name}}</td>
     <td>
