--- a/src/main/webapp/app/pages/shops/shop.html
+++ b/src/main/webapp/app/pages/shops/shop.html
@@ -15,6 +15,10 @@
                     <label class="control-label">Имя магазина</label>
                     <input type="text" class="form-control" ng-model="vm.shop.name">
                 </div>
+                <div class="form-group">
+                    <label class="control-label">ID Для доступа по ссылке</label>
+                    <input type="text" class="form-control" ng-model="vm.shop.idUrl">
+                </div>
                 <div class="set-buttons">
                     <button class="btn btn-default" ng-click="vm.followToShops()">Назад</button>
                     <button class="btn btn-default" ng-click="vm.followToCategories()">Далее</button>
@@ -33,8 +37,40 @@
     <div ng-if="vm.page == 'CATEGORIES'">
         <h1>02. Параметры для извлечения категорий</h1>
         <div class="row">
-            <div class="col-md-7">
+            <div class="col-md-8">
 
+
+                <div class="row form-group" ng-repeat="levelRule in vm.ruleExtractCategories">
+                    <div class="col-md-6">
+                        <div class="form-horizontal">
+                            <label class="col-md-4 control-label">Уровень {{$index + 1}}: cелектор</label>
+                            <div class="col-md-8">
+                                <input type="text" class="form-control" ng-model="levelRule.selector">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="form-horizontal">
+                            <label class="col-md-4 control-label">префикс</label>
+                            <div class="col-md-8">
+                                <input type="text" class="form-control">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        <button type="button" class="btn btn-default btn-sm"
+                                ng-click="vm.addNewCategoryLevel()">
+                            <span class="glyphicon glyphicon-plus"></span>
+                        </button>
+                        <button type="button" class="btn btn-default btn-sm"
+                                ng-click="vm.deleteLastCategoryLevel()"
+                                ng-if="!$first">
+                            <span class="glyphicon glyphicon-minus"></span>
+                        </button>
+                    </div>
+                </div>
+
+                <!--
 
                 <div class="form-horizontal">
                     <div class="form-group" ng-repeat="levelRule in vm.ruleExtractCategories">
@@ -56,7 +92,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div>-->
 
 
                 <div class="set-buttons">
@@ -68,7 +104,7 @@
             </div>
 
 
-            <div class="col-md-5">
+            <div class="col-md-4">
                 <div ng-if="vm.categories.length > 0">
 
                     <ul>
@@ -178,8 +214,12 @@
     <div ng-if="vm.page == 'PRODUCT'">
         <h1>04. Параметры для извлечения полей товара</h1>
         <div style="padding: 10px 0;">
-            <div class="alert alert-success" ng-if="vm.successUpdateRules != undefined">Правила для парсинга сохранены успешно.</div>
-            <div class="alert alert-danger"  ng-if="vm.errorUpdateRules != undefined">Во время сохранения правил для парсинга произошла ошибка.</div>
+            <div class="alert alert-success" ng-if="vm.successUpdateRules != undefined">Правила для парсинга сохранены
+                успешно.
+            </div>
+            <div class="alert alert-danger" ng-if="vm.errorUpdateRules != undefined">Во время сохранения правил для
+                парсинга произошла ошибка.
+            </div>
         </div>
 
         <div class="row">
@@ -196,6 +236,33 @@
                         </div>
                     </div>
                 </div>
+
+
+                <label>Извлечние изображения:</label>
+                <div class="row">
+
+                    <div class="col-md-6">
+                        <div class="form-horizontal">
+                            <div class="form-group">
+                                <label class="col-sm-2 control-label">Селектор</label>
+                                <div class="col-sm-10">
+                                    <input type="text" class="form-control"  placeholder="Селектор" ng-model="vm.ruleExtractProduct.selectorImage">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="form-horizontal">
+                            <div class="form-group">
+                                <label class="col-sm-3 control-label">Аттрибут</label>
+                                <div class="col-sm-9">
+                                    <input type="text" class="form-control"  placeholder="Аттрибут">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
 
                 <div class="form-group">
                     <label class="control-label">Селектор для извлечения ссылки на изображение:</label>
