Add opportunity pasing site where catalog isn't palced on root page

--- a/src/main/webapp/app/pages/shops/shop.html
+++ b/src/main/webapp/app/pages/shops/shop.html
@@ -53,7 +53,7 @@
                         <div class="form-horizontal">
                             <label class="col-md-4 control-label">префикс</label>
                             <div class="col-md-8">
-                                <input type="text" class="form-control">
+                                <input type="text" class="form-control" ng-model="levelRule.prefix">
                             </div>
                         </div>
                     </div>
